--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html,body{
 	max-width: 100%;
 	margin: auto;
 	height: 675px;
+	max-height: 100%;
 	background: url(images/homescreen.png) no-repeat;
 	background-size: contain;
 }
