--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 html,body{
 	margin: 0;
 	padding: 0;
+	height: 100%;
 }
 
 .swiper-container{
 	width: 375px;
 	max-width: 100%;
 	margin: auto;
-	height: 675px;
+	height: 100%;
 	max-height: 100%;
 	background: url(images/homescreen.png) no-repeat;
 	background-size: contain;
+	position: relative;
 }
 
 .swiper-wrapper{
-	bottom: 675px;
+	bottom: -675px;
 	transition: all 0.2s;
 	position: relative;
 }
@@ -25,7 +27,7 @@ html,body{
 }
 
 .swiper-slide > div{
-	height: 475px;
+	height: 67%;
 	bottom: 0;
 	position: absolute;
 	background: black;
@@ -33,8 +35,8 @@ html,body{
 }
 
 .swiper-slide img{
-	max-width: 100%;
-	margin-top: -192px;
+    max-width: 100%;
+    margin-top: -52%;
 }
 
 .active_area{
