--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@ html,body{
 }
 
 body{
-	background: url(images/homescreen.png) no-repeat;
+	background-image: url('images/homescreen.png');
+	background-repeat: no-repeat;
 	background-size: contain;
 }
 
 .swiper-container{
-	width: 375px;
+	width: 420px;
 	max-width: 100%;
-	margin: auto;
 	height: 100%;
 	max-height: 100%;
-	
+	margin-left: 0;
 	position: relative;
 }
 
@@ -30,12 +30,11 @@ body{
 	position: relative;
 }
 
+
 .img-wrap{
 	height: 72%;
 	bottom: 0;
 	position: absolute;
-	background: black;
-	opacity: 1;
 }
 
 .swiper-slide img{
@@ -45,7 +44,8 @@ body{
 
 .active_area{
 	height: 100px;
-	width: 100%;
+	width: 420px;
+	max-width: 100%;
 	content: " ";
 	position: absolute;
 	bottom: 0;
@@ -54,6 +54,16 @@ body{
 
 img.hide{
 	visibility: hidden;
+
+}
+
+.vertic{
+	transition: all 0.5s;
+}
+
+.vertic.open{
+	background: rgba(0,0,0,0.5);
+	
 }
 
 .area{
@@ -70,4 +80,13 @@ img.hide{
 	position: absolute;
 	width: 100%;
 	z-index: 1000;
+}
+
+.clear{
+	position: absolute;
+	display: block;
+ 	top: 24px;
+    width: 60px;
+    height: 30px;
+    right: 15px;
 }
